// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product Card Debe de incrementar el contador 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card
  </h1>
  <span>
    0
  </span>
  <button
    onClick={[Function]}
  >
     +1
  </button>
</div>
`;

exports[`Product Card Debe mostrar el componente correctamente 1`] = `
<div
  className="productCard undefined"
>
  <h1>
     Product Card
  </h1>
</div>
`;
